# games-craftisle

./: .gitignore  README.md  add-indicator.js  next.config.ts  package-lock.json  package.json  wrangler.toml
public/games/geoquiz/: .gitignore  CLAUDE.md  README.md  geoquiz.service  index.html  justfile  pyproject.toml
public/games/geoquiz/.github/workflows/: deploy.yml
public/games/geoquiz/data/: quizzes.json
public/games/geoquiz/data/quizzes/: africa-countries.json  african-capitals.json  asia-countries.json  asian-capitals.json  eu-member-states.json  europe-countries.json  european-capitals.json  largest-countries.json  middle-east-countries.json  nato-member-states.json  north-america-countries.json  north-american-capitals.json  oceania-countries.json  south-america-countries.json  south-american-capitals.json  southeast-asia-countries.json  us-presidents.json  us-state-capitals.json  us-states.json
public/games/geoquiz/js/: app.js  quiz.js
public/games/geoquiz/scripts/: compute_centroids.py
public/games/geoquiz/src/geoquiz/: app.py  config.py
public/games/geoquiz/src/geoquiz/data/: africa_countries.py  african_capitals.py  asia_countries.py  asian_capitals.py  eu_member_states.py  europe_countries.py  european_capitals.py  largest_countries.py  middle_east_countries.py  nato_member_states.py  north_america_countries.py  north_american_capitals.py  oceania_countries.py  registry.py  south_america_countries.py  south_american_capitals.py  (+4 more)
public/games/geoquiz/static/js/: quiz.js
public/games/geoquiz/templates/: base.html  index.html  quiz.html
(+418 files in other folders)
